@@ -8,8 +8,8 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.io.Resource;
 
-import java.security.KeyStore.PrivateKeyEntry;
-import java.util.Collections;
+import java.security.cert.X509Certificate;
+import java.util.List;
 
 import static hr.leadtheway.fiskalizacija.KeyUtils.loadPKCS12;
 import static hr.leadtheway.fiskalizacija.KeyUtils.loadX509;
@@ -17,48 +17,42 @@ import static hr.leadtheway.fiskalizacija.KeyUtils.loadX509;
 @Configuration
 public class ClientConfiguration {
 
-    private final Resource p12Path;
-    private final String storePass;
-    private final String alias;
-    private final String keyPass;
-    private final Resource responsePublicKey;
+    private final Resource p12PrivateKeyFile;
+    private final String p12StorePass;
+    private final String p12KeyAlias;
+    private final String p12KeyPass;
+    private final Resource responsePublicKeyFile;
 
     public ClientConfiguration(
             @Value("${fina.keystore.path}") Resource p12PrivateKeyFile,
-            @Value("${fina.keystore.storepass}") String storePass,
-            @Value("${fina.keystore.alias}") String alias,
-            @Value("${fina.keystore.keypass}") String keyPass,
+            @Value("${fina.keystore.storepass}") String p12StorePass,
+            @Value("${fina.keystore.alias}") String p12KeyAlias,
+            @Value("${fina.keystore.keypass}") String p12KeyPass,
             @Value("${fina.response.public-key}") Resource responsePublicKeyFile
     ) {
-        this.p12Path = p12PrivateKeyFile;
-        this.storePass = storePass;
-        this.alias = alias;
-        this.keyPass = keyPass;
-        this.responsePublicKey = responsePublicKeyFile;
+        this.p12PrivateKeyFile = p12PrivateKeyFile;
+        this.p12StorePass = p12StorePass;
+        this.p12KeyAlias = p12KeyAlias;
+        this.p12KeyPass = p12KeyPass;
+        this.responsePublicKeyFile = responsePublicKeyFile;
     }
 
     @Bean
-    public PrivateKeyEntry fiscalKeyEntry() throws Exception {
-        return loadPKCS12(
-                p12Path,
-                storePass.toCharArray(),
-                alias,
-                keyPass.toCharArray()
+    public FiskalizacijaPortType fiskalizacijaPort() throws Exception {
+        var port = new FiskalizacijaService().getFiskalizacijaPortType();
+
+        var p12 = loadPKCS12(
+                p12PrivateKeyFile,
+                p12StorePass.toCharArray(),
+                p12KeyAlias,
+                p12KeyPass.toCharArray()
         );
-    }
 
-    @Bean
-    public XmlSignatureOutboundHandler signatureHandler(PrivateKeyEntry fiscalKeyEntry) {
-        return new XmlSignatureOutboundHandler(fiscalKeyEntry);
-    }
-
-    @Bean
-    public FiskalizacijaPortType fiskalizacijaPort(hr.leadtheway.fiskalizacija.XmlSignatureOutboundHandler signatureHandler) {
-        var service = new FiskalizacijaService();
-        var port = service.getFiskalizacijaPortType();
+        var outboundSignatureHandler = new XmlSignatureOutboundHandler(p12.getPrivateKey(), (X509Certificate) p12.getCertificate());
+        var inboundSignatureHandler = new XmlSignatureInboundHandler(loadX509(responsePublicKeyFile));
 
         if (port instanceof BindingProvider bindingProvider) {
-            bindingProvider.getBinding().setHandlerChain(Collections.singletonList(signatureHandler));
+            bindingProvider.getBinding().setHandlerChain(List.of(outboundSignatureHandler, inboundSignatureHandler));
         } else {
             throw new IllegalArgumentException("Unsupported port");
         }
